force-app/main/default/objects/AccessCodeRevenue__c/AccessCodeRevenue__c.object-meta.xml
<CustomObject>
    <description>Display&apos;s monthly audio minutes, web minutes and revenue total by access code.</description>
    <label>Access Code Revenue</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Access Code Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Code Revenue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>