force-app/main/default/objects/AccessCodeRevenue__c/fields/AccessCode__c.field-meta.xml
<CustomField>
    <fullName>AccessCode__c</fullName>
    <label>Access Code</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Access Code Revenue</relationshipLabel>
    <relationshipName>AccessCodeRevenue</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>