force-app/main/default/objects/AccessCodeRevenue__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Access Code Revenue</relationshipLabel>
    <relationshipName>Access_Code_Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>