force-app/main/default/objects/AccessCodeRevenue__c/fields/AudioMinutesTotal__c.field-meta.xml
<CustomField>
    <fullName>AudioMinutesTotal__c</fullName>
    <label>Audio Minutes Total</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>