force-app/main/default/objects/AccessCodeRevenue__c/fields/RevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>RevenueTotal__c</fullName>
    <label>Revenue Total</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>