force-app/main/default/objects/AccessCodeRevenue__c/fields/RT_Access_Code_Revenue_Id__c.field-meta.xml
<CustomField>
    <fullName>RT_Access_Code_Revenue_Id__c</fullName>
    <description>Migration</description>
    <externalId>true</externalId>
    <label>RT Access Code Revenue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>