force-app/main/default/objects/AccessCodeRevenue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccessCode__c</columns>
    <columns>Power_of_One__c</columns>
    <columns>RevenueTotal__c</columns>
    <columns>AudioMinutesTotal__c</columns>
    <columns>Created_DateTime__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>